# nouns-anonymous-voting

./: .env.template  .gitignore  .gitmodules  Cargo.toml  README.md  prep-contracts.sh  prep-tally-circuit.sh
circuit/src/: main.nr
circuits/1024_voters/: Nargo.toml  Prover.toml
circuits/1024_voters/256_voters/: Prover.toml
circuits/1024_voters/src/: main.nr
circuits/16_voters/: Nargo.toml  Prover.toml
circuits/16_voters/src/: main.nr
circuits/2048_voters/: Nargo.toml  Prover.toml
circuits/2048_voters/src/: main.nr
circuits/256_voters/: Nargo.toml
circuits/256_voters/src/: main.nr
circuits/512_voters/: Nargo.toml
circuits/512_voters/src/: main.nr
circuits/client-proof/: Nargo.toml  Prover.toml
circuits/client-proof/src/: main.nr
circuits/hash_proof/: Nargo.toml  Prover.toml
circuits/hash_proof/src/: main.nr
circuits/tally/: Nargo.toml  Prover.toml
circuits/tally/src/: lib.nr  main.nr
contracts/: .env.template  README.md  foundry.toml  remappings.txt
contracts/script/: 0_ZKRegistry.s.sol  1_NounsToken.s.sol  2_NounsVoting.s.sol  3_NounsMainnetVoting.s.sol  Counter.s.sol
contracts/src/: BaseUltraVerifier.sol  HashVerifier.sol  INoirVerifier.sol  NounsTokenFactory.sol  NounsVoting.sol  NounsVotingContract.sol  Poseidon.sol  TallyVerifier.sol  VoteVerifier.sol  ZKRegistry.sol
contracts/test/: NoirSampleVerifier.sol  ZKRegistry.t.sol
docs/: NounsDesign.md  VoteGeneration.md
nouns-cli/: Cargo.toml
nouns-cli/src/: cli.rs  lib.rs  main.rs  parsers.rs  storage_proofs.rs
nouns-cli/src/ethereum/: contract_interactions.rs  mod.rs  proofs.rs  storage_proofs.rs
nouns-protocol/: Cargo.toml
nouns-protocol/src/: lib.rs  tallier.rs  voter.rs
nouns-protocol/src/noir/: mod.rs  toml.rs
nouns-protocol/src/utils/: mock.rs  mod.rs  wrapper.rs
src/: contract.rs  election.rs  lib.rs  main.rs  preprover.rs  services.rs  snark_repr.rs  tallier.rs  utils.rs  vote_aggregation.rs  vote_proof.rs  voter.rs
src/serialisation/: bn254_fr.rs  mod.rs  toml.rs
src/services/: ethereum.rs  noir.rs  tlcs.rs
src/services/noir/: serialisation.rs
src/services/noir/serialisation/: toml.rs
src/utils/: mock.rs  wrapper.rs
