[package]
name = "nouns-voting-client"
version = "0.1.0"
edition = "2021"
authors = ["AZKR Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = {version="0.4.0"}
ark-ec = {version="0.4.0"}
ark-bn254 = { version = "0.4.0" }
ark-ed-on-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
hex = "^0.4.0"

# THESE DEPENDENCIES ARE NOT PRODUCTION READY
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
babyjubjub-ark = { git="https://github.com/arnaucube/babyjubjub-ark" }


