[package]
name = "nouns-voting-client"
version = "0.1.0"
edition = "2021"
authors = ["AZKR Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# THESE DEPENDENCIES ARE NOT PRODUCTION READY
ark-ff = {version="0.4.0"}
ark-ec = {version="0.4.0"}
ark-bn254 = { version = "0.4.0" }
ark-ed-on-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

# THESE DEPENDENCIES ARE EXPERIMENTAL DONE BY ARNAU
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark"}
babyjubjub-ark = { git="https://github.com/arnaucube/babyjubjub-ark", features = ["aarch64"] }

# OTHER DEPENDENCIES
hex = "^0.4.0"
toml = "0.7.3"

