[package]
name = "nouns-anonymous-voting"
version = "0.1.0"
edition = "2021"
authors = ["AZKR Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# THESE DEPENDENCIES ARE NOT PRODUCTION READY
ark-ff = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-bn254 = { version = "0.4.0" }
ark-ed-on-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

# THESE DEPENDENCIES ARE EXPERIMENTAL AND DONE BY ARNAU
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark", features = ["aarch64"], rev = "dbf79c5" }

# OTHER DEPENDENCIES
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
eyre = "0.6"
clap = { version = "4.3.3", features = ["derive"] }
hex = "^0.4.0"
toml = "0.7.3"
strum = "0.24.1"
strum_macros = "0.24.3"
futures = "0.3.28"

