[package]
name = "nouns-cli"
version = "0.1.0"
edition = "2021"
authors = ["AZKR Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.3.3", features = ["derive", "cargo", "env"] }

nouns-protocol = { path = "../nouns-protocol", features = ["mock-noir"] }

[dev-dependencies]
dotenv = "0.15"
