[package]
name = "nouns-cli"
version = "0.1.0"
edition = "2021"
authors = ["AZKR Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
eyre = "0.6"
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.3.3", features = ["derive", "cargo", "env"] }

nouns-protocol = { path = "../nouns-protocol"}
toml = "0.7.6"
indicatif = "0.17.5"
futures = "0.3.28"
console = "0.15.7"
ark-ff = "0.4.2"

